--- a/Views/TeachingAssistant/_PhongVanTA.cshtml
+++ b/Views/TeachingAssistant/_PhongVanTA.cshtml
@@ -317,7 +317,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-01" ketquatieuchi="2" id="tieuchi-1-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-01" ketquatieuchi="2" id="tieuchi-1-2">
                                     </div>
                                 </td>
                             </tr>
@@ -337,7 +337,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-2" ketquatieuchi="2" id="tieuchi-2-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-2" ketquatieuchi="2" id="tieuchi-2-2">
                                     </div>
                                 </td>
                             </tr>
@@ -357,7 +357,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-3" ketquatieuchi="2" id="tieuchi-3-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-3" ketquatieuchi="2" id="tieuchi-3-2">
                                     </div>
                                 </td>
                             </tr>
@@ -377,7 +377,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-4" ketquatieuchi="2" id="tieuchi-4-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-4" ketquatieuchi="2" id="tieuchi-4-2">
                                     </div>
                                 </td>
                             </tr>
@@ -397,7 +397,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-5" ketquatieuchi="2" id="tieuchi-5-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-5" ketquatieuchi="2" id="tieuchi-5-2">
                                     </div>
                                 </td>
                             </tr>
@@ -417,7 +417,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-6" ketquatieuchi="2" id="tieuchi-6-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-6" ketquatieuchi="2" id="tieuchi-6-2">
                                     </div>
                                 </td>
                             </tr>
@@ -437,7 +437,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-7" ketquatieuchi="2" id="tieuchi-7-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-7" ketquatieuchi="2" id="tieuchi-7-2">
                                     </div>
                                 </td>
                             </tr>
@@ -457,7 +457,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-8" ketquatieuchi="2" id="tieuchi-8-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-8" ketquatieuchi="2" id="tieuchi-8-2">
                                     </div>
                                 </td>
                             </tr>
@@ -477,7 +477,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-9" ketquatieuchi="2" id="tieuchi-9-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-9" ketquatieuchi="2" id="tieuchi-9-2">
                                     </div>
                                 </td>
                             </tr>
@@ -497,7 +497,7 @@ else
                                 </td>
                                 <td valign="middle" align="center">
                                     <div class="form-check" style=" display: flex; align-items: center; justify-content: center;">
-                                        <input class="form-check-input" type="radio" name="tieuchi-10" ketquatieuchi="2" id="tieuchi-10-2">
+                                        <input checked class="form-check-input" type="radio" name="tieuchi-10" ketquatieuchi="2" id="tieuchi-10-2">
                                     </div>
                                 </td>
                             </tr>
@@ -512,7 +512,7 @@ else
                                     <b id="tongdiem-2">0</b>
                                 </td>
                                 <td valign="middle" align="center">
-                                    <b id="tongdiem-3">0</b>
+                                    <b id="tongdiem-3">10</b>
                                 </td>
                             </tr>
                             <tr>
