--- a/Views/TeachingAssistant/_FilterChildApply.cshtml
+++ b/Views/TeachingAssistant/_FilterChildApply.cshtml
@@ -31,7 +31,7 @@
                     <th class="text-nowrap">Tên HP</th>
                     <th class="text-nowrap">Loại HP</th>
                     <th class="text-nowrap">Lịch Học</th>
-                    <th class="text-nowrap">Số tiết</th>
+                    <th class="text-nowrap">Số TC</th>
                     <th class="text-nowrap">Ứng tuyển</th>
                     <th class="text-nowrap"></th>
                 </tr>
@@ -62,7 +62,7 @@
                                 }
                             </ul>
                         </td>
-                        <td valign="middle">@item.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
+                        <td valign="middle">@item.ThoiKhoaBieu.Sum(s => s.SoTC)</td>
                         <td valign="middle" class="text-nowrap">
                             @if (item.UngTuyenTroGiang.FirstOrDefault(f => f.ID_TaiKhoan == idTk) != null)
                             {
