Update view thống kê

--- a/Views/Statisticals/_FilterStatistical.cshtml
+++ b/Views/Statisticals/_FilterStatistical.cshtml
@@ -104,8 +104,8 @@
                                 </tr>
                                 <tr hidden name="@item.First().ID" id="child-data-@item.First().ID">
                                     <td hidden>@(i+ 0.5)</td>
-                                    <td colspan="6" class="p-0">
-                                        <table d="none-datatable" class="ms-5 table table-sm table-sm m-0" style="width:100%">
+                                    <td colspan="6" class="p-0 ps-10">
+                                        <table d="none-datatable" class="table table-sm table-sm m-0" style="width:100%">
                                             <thead class="table-light">
                                                 <tr>
                                                     <th>Tên LHP</th>
