--- a/Views/Statisticals/Statistical.cshtml
+++ b/Views/Statisticals/Statistical.cshtml
@@ -196,8 +196,8 @@
                     <div class="table-card mt-3 border-top-lg">
                         <div class="card-body mt-3" id="filterLoad">
                             <div class="table-card">
-                                <table id="dataTableBasic" class="table table-hover" style="width:100%">
-                                    <thead class="table-light">
+                                <table id="dataTableBasics" class="table table-hover" style="width:100%">
+                                    <thead id="thread-thongke" class="table-light">
                                         <tr>
                                             <th align="center" class="text-center bg-white" colspan="6">
                                                 <h4>Danh sách Trợ Giảng đã được phân công</h4>
@@ -205,6 +205,7 @@
                                         </tr>
                                         <tr>
                                             <th>TT</th>
+                                            <th class="p-0 m-0"></th>
                                             <th>Mã TA</th>
                                             <th>Họ & Tên TA</th>
                                             <th>Mã GV</th>
@@ -215,61 +216,58 @@
                                     <tbody>
                                         @if ((ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).Count() > 0 ? ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count() : 0) > 0)
                                         {
-                                            foreach (var item in ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).ToList())
+                                            foreach (var item in ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList())
                                             {
                                                 i++;
-                                                <tr name="@item.First().ID" id="parent-data-@item.First().ID">
-                                                    <td valign="middle">@i</td>
-                                                    <td valign="middle">@item.First().MSSV</td>
-                                                    <td valign="middle">
-                                                        @item.First().HoTen
+                                                <tr name="@item.ID">
+                                                    <td valign="middle">@i
                                                     </td>
-                                                    <td valign="middle">
-                                                        @item.First().LopHocPhan.MaCBGD
+                                                    <td class="ps-0 pe-0">
+                                                        <i name="@item.ID" role="button" style="font-size: 21px" class="bi bi-plus-circle-fill text-success btn-open-child"></i>
                                                     </td>
+                                                    <td valign="middle">@item.MSSV</td>
                                                     <td valign="middle">
-                                                        @item.First().LopHocPhan.TenCBGD
+                                                        @item.HoTen
                                                     </td>
                                                     <td valign="middle">
-                                                        Mã LHP: @item.First().LopHocPhan.MaLHP
+                                                        @item.LopHocPhan.MaCBGD
                                                     </td>
-                                                </tr>
-                                                <tr hidden name="@item.First().ID" id="child-data-@item.First().ID">
-                                                    <td hidden>@(i+ 0.5)</td>
-                                                    <td colspan="6" class="p-0 ps-10">
-                                                        <table d="none-datatable" class="table table-sm table-sm m-0" style="width:100%">
-                                                            <thead class="table-light">
-                                                                <tr>
-                                                                    <th>Tên LHP</th>
-                                                                    <th>TC</th>
-                                                                    <th>TSMH</th>
-                                                                    <th>Giờ QĐ</th>
-                                                                    <th>Số SV</th>
-                                                                    <th>Lý do đề xuất</th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody>
-                                                                <tr>
-                                                                    <td valign="middle">@item.First().LopHocPhan.TenHP</td>
-                                                                    <td valign="middle">@item.First().LopHocPhan.ThoiKhoaBieu.First().SoTC</td>
-                                                                    <td valign="middle">@item.First().LopHocPhan.ThoiKhoaBieu.First().TSMH</td>
-                                                                    <td valign="middle">
-                                                                        @item.First().LopHocPhan.PhanCongTroGiang.First().SoGioQuyDoi
-                                                                    </td>
-                                                                    <td valign="middle">
-                                                                        @item.First().LopHocPhan.DanhSachSinhVien.Count
-                                                                    </td>
-                                                                    <td valign="middle">
-                                                                        @item.First().LopHocPhan.DeXuatTroGiang.First().LyDoDeXuat
-                                                                    </td>
-                                                                </tr>
-                                                            </tbody>
-                                                        </table>
+                                                    <td valign="middle">
+                                                        @item.LopHocPhan.TenCBGD
                                                     </td>
-                                                    <td hidden></td>
-                                                    <td hidden></td>
-                                                    <td hidden></td>
-                                                    <td hidden></td>
+                                                    <td valign="middle">
+                                                        @item.LopHocPhan.MaLHP
+                                                        <div hidden name="@item.ID" id="child-data-@item.ID">
+                                                            <table d="none-datatable" class="table table-sm table-sm m-0" style="width:100%">
+                                                                <thead class="table-light">
+                                                                    <tr>
+                                                                        <th>Tên LHP</th>
+                                                                        <th>TC</th>
+                                                                        <th>Tổng số giờ HP</th>
+                                                                        <th>Số giờ TA</th>
+                                                                        <th>Số SV</th>
+                                                                        <th>Lý do đề xuất</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                    <tr>
+                                                                        <td valign="middle">@item.LopHocPhan.TenHP</td>
+                                                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.First().SoTC</td>
+                                                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.First().TSMH</td>
+                                                                        <td valign="middle">
+                                                                            @item.LopHocPhan.PhanCongTroGiang.First().SoGioQuyDoi
+                                                                        </td>
+                                                                        <td valign="middle">
+                                                                            @item.LopHocPhan.DanhSachSinhVien.Count
+                                                                        </td>
+                                                                        <td valign="middle">
+                                                                            @item.LopHocPhan.DeXuatTroGiang.First().LyDoDeXuat
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </td>
                                                 </tr>
                                             }
                                         }
@@ -337,18 +335,36 @@
                 }
             }
         });
-    });
 
-    //Xem chi tiết dòng dưới
-    $('body').on('click', '[id^="parent-data-"]', function () {
-        var id = $(this).attr('name');
-        $('body').find('[id^="child-data-"]').each(function () {
-            var lstDetail = $(this);
-            if (lstDetail.attr('name') == id) {
-                lstDetail.prop('hidden', false);
-            }
-            else {
-                lstDetail.prop('hidden', true);
+        function format(d, id) {
+            return (
+                $('body').find('[id="' + id + '"]').html()
+            );
+        }
+
+        let table = $("#dataTableBasics").DataTable();
+        table.on('click', '.btn-open-child', function (e) {
+            //table.rows().every(function () {
+            //    var row = this;
+            //    if (row.child.isShown()) {
+            //        row.child.hide();
+            //        $(this.node()).removeClass('shown');
+            //        $(".close-child-rows").addClass("disable-button");
+            //    }
+            //});
+            var id = 'child-data-' + $(this).attr('name');
+            if (id.indexOf('undefined') == -1) {
+                let tr = e.target.closest('tr');
+                let row = table.row(tr);
+
+                if (row.child.isShown()) {
+                    row.child.hide();
+                    $(this).replaceWith(`<i name="` + $(this).attr('name') + `" role="button" style="font-size: 21px" class="bi bi-plus-circle-fill text-success btn-open-child"></i>`)
+                }
+                else {
+                    row.child(format(row.data(), id)).show();
+                    $(this).replaceWith(`<i name="` + $(this).attr('name') + `" role="button" style="font-size: 21px" class="bi bi-dash-circle-fill text-danger btn-open-child"></i>`)
+                }
             }
         });
     });
