--- a/Views/Statisticals/_FilterStatistical.cshtml
+++ b/Views/Statisticals/_FilterStatistical.cshtml
@@ -83,26 +83,26 @@
                     <tbody>
                         @if ((ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).Count() > 0 ? ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count() : 0) > 0)
                         {
-                            foreach (var item in ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).ToList())
+                            foreach (var item in ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList())
                             {
                                 i++;
-                                <tr name="@item.First().ID" id="parent-data-@item.First().ID">
+                                <tr name="@item.ID" id="parent-data-@item.ID">
                                     <td valign="middle">@i</td>
-                                    <td valign="middle">@item.First().MSSV</td>
+                                    <td valign="middle">@item.MSSV</td>
                                     <td valign="middle">
-                                        @item.First().HoTen
+                                        @item.HoTen
                                     </td>
                                     <td valign="middle">
-                                        @item.First().LopHocPhan.MaCBGD
+                                        @item.LopHocPhan.MaCBGD
                                     </td>
                                     <td valign="middle">
-                                        @item.First().LopHocPhan.TenCBGD
+                                        @item.LopHocPhan.TenCBGD
                                     </td>
                                     <td valign="middle">
-                                        Mã LHP: @item.First().LopHocPhan.MaLHP
+                                        @item.LopHocPhan.MaLHP
                                     </td>
                                 </tr>
-                                <tr hidden name="@item.First().ID" id="child-data-@item.First().ID">
+                                <tr hidden name="@item.ID" id="child-data-@item.ID">
                                     <td hidden>@(i+ 0.5)</td>
                                     <td colspan="6" class="p-0 ps-10">
                                         <table d="none-datatable" class="table table-sm table-sm m-0" style="width:100%">
@@ -118,17 +118,17 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td valign="middle">@item.First().LopHocPhan.TenHP</td>
-                                                    <td valign="middle">@item.First().LopHocPhan.ThoiKhoaBieu.First().SoTC</td>
-                                                    <td valign="middle">@item.First().LopHocPhan.ThoiKhoaBieu.First().TSMH</td>
+                                                    <td valign="middle">@item.LopHocPhan.TenHP</td>
+                                                    <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.First().SoTC</td>
+                                                    <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.First().TSMH</td>
                                                     <td valign="middle">
-                                                        @item.First().LopHocPhan.PhanCongTroGiang.First().SoGioQuyDoi
+                                                        @item.LopHocPhan.PhanCongTroGiang.First().SoGioQuyDoi
                                                     </td>
                                                     <td valign="middle">
-                                                        @item.First().LopHocPhan.DanhSachSinhVien.Count
+                                                        @item.LopHocPhan.DanhSachSinhVien.Count
                                                     </td>
                                                     <td valign="middle">
-                                                        @item.First().LopHocPhan.DeXuatTroGiang.First().LyDoDeXuat
+                                                        @item.LopHocPhan.DeXuatTroGiang.First().LyDoDeXuat
                                                     </td>
                                                 </tr>
                                             </tbody>
