--- a/Views/TeachingAssistant/Advances.cshtml
+++ b/Views/TeachingAssistant/Advances.cshtml
@@ -152,7 +152,7 @@
                                     <th class="text-nowrap">Lớp học phần</th>
                                     <th class="text-nowrap">Giảng Viên</th>
                                     <th class="text-nowrap">Lịch Học</th>
-                                    <th class="text-nowrap">Số tiết</th>
+                                    <th class="text-nowrap">Số TC</th>
                                     <th class="text-nowrap">Số SV</th>
                                     <th class="text-nowrap">Trạng thái</th>
                                     <th class="text-nowrap">Cập nhật</th>
@@ -183,7 +183,7 @@
                                             Tên: @item.TenCBGD
                                         </td>
                                         <td valign="middle">@(item.ThoiKhoaBieu.First().Thu); Tiết @(item.ThoiKhoaBieu.First().TietHoc); Tuần @(item.ThoiKhoaBieu.First().TuanBD) - @(item.ThoiKhoaBieu.First().TuanKT); Phòng @(item.ThoiKhoaBieu.First().Phong)</td>
-                                        <td valign="middle">@item.ThoiKhoaBieu.First().SoTietDaXep</td>
+                                        <td valign="middle">@item.ThoiKhoaBieu.First().SoTC</td>
                                         <td valign="middle">@item.UngTuyenTroGiang.Count()</td>
                                         <td valign="middle" class="text-nowrap">
                                             @if (item.DeXuatTroGiang.First().TrangThai == false)
