--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -115,7 +115,7 @@
                                     <th class="text-nowrap">Mã LHP</th>
                                     <th class="text-nowrap">Tên HP</th>
                                     <th class="text-nowrap">Lịch Học</th>
-                                    <th class="text-nowrap">Số tiết</th>
+                                    <th class="text-nowrap">Số TC</th>
                                     <th class="text-nowrap">Trạng thái</th>
                                     <th class="text-nowrap"></th>
                                 </tr>
@@ -136,7 +136,7 @@
                                                 }
                                             </ul>
                                         </td>
-                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
+                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.SoTC)</td>
                                         <td valign="middle" class="text-nowrap">
                                             @if (item.DanhGiaPhongVan.Count < 1)
                                             {
