--- a/Views/TeachingAssistant/_FilterAdvances.cshtml
+++ b/Views/TeachingAssistant/_FilterAdvances.cshtml
@@ -10,7 +10,7 @@
                     <th class="text-nowrap">Lớp học phần</th>
                     <th class="text-nowrap">Giảng Viên</th>
                     <th class="text-nowrap">Lịch Học</th>
-                    <th class="text-nowrap">Số tiết</th>
+                    <th class="text-nowrap">Số TC</th>
                     <th class="text-nowrap">Số SV</th>
                     <th class="text-nowrap">Trạng thái</th>
                     <th class="text-nowrap">Cập nhật</th>
@@ -50,7 +50,7 @@
                                 }
                             </ul>
                         </td>
-                        <td valign="middle">@item.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
+                        <td valign="middle">@item.ThoiKhoaBieu.Sum(s => s.SoTC)</td>
                         <td valign="middle">0</td>
                         <td valign="middle" class="text-nowrap">
                             @if (item.DeXuatTroGiang.First().TrangThai == false)
