--- a/Views/TeachingAssistant/_FilterResultApply.cshtml
+++ b/Views/TeachingAssistant/_FilterResultApply.cshtml
@@ -11,7 +11,7 @@
                     <th class="text-nowrap">Mã LHP</th>
                     <th class="text-nowrap">Tên HP</th>
                     <th class="text-nowrap">Lịch Học</th>
-                    <th class="text-nowrap">Số tiết</th>
+                    <th class="text-nowrap">Số TC</th>
                     <th class="text-nowrap">Trạng thái</th>
                     <th class="text-nowrap"></th>
                 </tr>
@@ -32,7 +32,7 @@
                                 }
                             </ul>
                         </td>
-                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
+                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.TC)</td>
                         <td valign="middle" class="text-nowrap">
                             @if (item.DanhGiaPhongVan.Count < 1)
                             {
